# agent_rulez

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Taskfile.yml  rustfmt.toml
.claude/: hooks.yaml  settings (1).local.json  settings.json  settings.local.json
.claude/commands/: cch-release.md
.github/workflows/: ci.yml  e2e-matrix.yml  e2e-windows.yml  e2e.yml  release.yml  tauri-build.yml  validation.yml
.opencode/command/: cch-release.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v2.2.1-REQUIREMENTS.md  v2.2.2-MILESTONE-AUDIT.md  v2.2.2-REQUIREMENTS.md  v2.2.2-ROADMAP.md  v2.3.0-MILESTONE-AUDIT.md  v2.3.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specify/memory/: constitution.md
.speckit/: constitution.md  features.md
.speckit/checklists/: README.md  phase2-governance-checklist.md  rulez-ui-checklist.md
cch_cli/: Cargo.toml
cch_cli/src/: cli.rs  config.rs  hooks.rs  lib.rs  logging.rs  main.rs  models.rs
cch_cli/tests/: copilot_adapter.rs  copilot_doctor.rs  copilot_hook_runner.rs  copilot_install.rs  gemini_adapter.rs  gemini_doctor.rs  gemini_hook_runner.rs  gemini_install.rs  iq_installation.rs  iq_new_commands.rs  opencode_doctor.rs  opencode_hook_runner.rs  opencode_install.rs  opencode_payload_tests.rs  oq_us1_blocking.rs  oq_us2_injection.rs  oq_us3_validators.rs  oq_us4_permissions.rs  oq_us5_logging.rs  pq_performance.rs
docs/: COPILOT_CLI_HOOKS.md  COPILOT_VSCODE_EXTENSION.md  EVENT-MAPPING.md  GEMINI_CLI_HOOKS.md  IQ_OQ_PQ_IntegrationTesting.md  OPENCODE_CLI_HOOKS.md  README.md  TOOL-MAPPING.md  USER_GUIDE_CLI.md  before-agent-guide.md  config-schema.md  event-schema.md
docs/features/: external-logging.md  lint.md  test.md
docs/guides/: claude-code-guide.md  gemini-cli-guide.md  opencode-guide.md
docs/plans/: multi-runtime-skill-portability.md  phase26_opencode_e2e_05_03_2026.md  tool-name-canonicalization.md
docs/prds/: cch_cli_prd.md  cch_system.md  mastering_hooks.md  phase2_prd.md
e2e/: run.sh
e2e/lib/: claude_adapter.sh  codex_adapter.sh  copilot_adapter.sh  (+4 more)
mastering-hooks/: SKILL.md
opencode-plugin/: README.md
rulez/: Cargo.toml  Taskfile.yml
rulez-ui/: .gitignore  README.md  Taskfile.yml  package-lock.json  package.json
rulez/src/: cli.rs  config.rs  hooks.rs  lib.rs  logging.rs  main.rs  models.rs  schema.rs
rulez/src/adapters/: copilot.rs  gemini.rs  opencode.rs
rulez/src/cli/: copilot_doctor.rs  copilot_install.rs  debug.rs  gemini_hook.rs  init.rs  install.rs  lint.rs  opencode_doctor.rs  opencode_install.rs  skills.rs  test.rs  upgrade.rs
rulez/src/opencode/: audit.rs  config.rs  mod.rs
rulez/src/skills/: config_gen.rs  discovery.rs  mod.rs  profiles.rs  transform.rs  writer.rs
rulez/src/skills/transforms/: colors.rs  command_naming.rs  frontmatter.rs  mod.rs  path_refs.rs  tool_names.rs
rulez/tests/: cli_lint_command.rs  cli_test_command.rs  copilot_adapter.rs  copilot_doctor.rs  copilot_hook_runner.rs  copilot_install.rs  e2e_git_push_block.rs  e2e_symlink_resolution.rs  field_validation_integration.rs  gemini_adapter.rs  gemini_doctor.rs  gemini_hook_runner.rs  gemini_install.rs  inline_script_integration.rs  iq_installation.rs  iq_new_commands.rs  opencode_doctor.rs  opencode_hook_runner.rs  opencode_install.rs  opencode_payload_tests.rs  oq_us1_blocking.rs  oq_us2_injection.rs  oq_us3_enabled_when.rs  oq_us3_validators.rs  oq_us4_permissions.rs  oq_us5_logging.rs  pq_memory.rs  pq_performance.rs  prompt_match_integration.rs  schema_validation_integration.rs
rulez/tests/common/: mod.rs
rulez/tests/fixtures/: test-scenarios.yaml
rulez_ui/: .gitignore  README.md  package.json  playwright.config.ts
rulez_ui/src-tauri/: Cargo.toml  tauri.conf.json
rulez_ui/src-tauri/src/: main.rs
rulez_ui/src-tauri/src/commands/: debug.rs
runbooks/: 01-claude-code.md  02-opencode.md  03-gemini-cli.md  README.md
scripts/: collect-iq-evidence.sh  collect-oq-evidence.sh  collect-pq-evidence.sh  generate-validation-report.sh
src/: config.rs  lib.rs  main.rs
(+453 files in other folders)
