# RuleZ Workspace - AI Policy Engine Monorepo
#
# This workspace contains the RuleZ policy engine and related packages.
# The binary is a POLICY ENGINE that EXECUTES user-configured YAML rules.
# It does NOT have built-in blocking/injection features - all behavior
# is defined by user YAML configuration in .claude/hooks.yaml.
#
# Components:
# - rulez/           Core policy engine binary (Rust)
# - mastering-hooks/ Claude Code skill for RuleZ mastery
# - rulez-ui/        Tauri desktop app for visual configuration

[workspace]
members = ["rulez"]
exclude = ["rulez-ui/src-tauri"]
resolver = "2"

[workspace.package]
version = "1.8.0"
authors = ["Rick Hightower <rick@spillwave.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Patterns
regex = "1.10"
lru = "0.12"

# Async (minimal features for performance)
tokio = { version = "1.0", features = ["process", "time", "fs", "io-std", "io-util", "rt", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# System
dirs = "5.0"

# JSON Schema
schemars = { version = "1.2", features = ["derive"] }
jsonschema = "0.28"

# Testing (used as dev-dependencies in member crates)
tempfile = "3.24"
assert_cmd = "2.0"
predicates = "3.1"

# Release profile for all workspace members
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
